--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -64,7 +64,7 @@
     padding-bottom: 5px;
     font-family: $sans-serif-narrow;
     font-size: $type-size-7;
-    text-transform: // uppercase;
+    text-transform: none; // uppercase;
   }
 
   li + li:before {
