--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -31,6 +31,7 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     font-family: $sans-serif-narrow;
+    font-size: $type-size-6;
 
     @include breakpoint($x-large) {
       max-width: $max-width;
@@ -66,6 +67,7 @@
   align-self: center;
   font-weight: bold;
   // z-index: 20;
+  font-size: $type-size-2;
 }
 
 .site-subtitle {
