--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -67,7 +67,7 @@
   align-self: center;
   font-weight: bold;
   // z-index: 20;
-  font-size: $type-size-5;
+  // font-size: $type-size-5;
 }
 
 .site-subtitle {
